# web-assembly

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: echo.rs  io.rs  json.rs  lib.rs  struct.rs  test1.rs
test-node/: index.html  index.js
www/api/: 1.json  1.rs
www/js/: 1.js  index.js
www/layout/: footer.html  head-common.html
www/view/: index.html  login.html
