[package]
name = "hello"
version = "0.1.0"
authors = ["lzxxm <1052334039@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.1"
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"] }
js-sys = "0.3.32"
wasm-bindgen-futures = "0.4.5"
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.103"
serde_json = "1.0.44"
hmac-sha256 = "0.1.2"

# https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3.32"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ReferrerPolicy',
  'Response',
  'Window',
  'Url',
  'UrlSearchParams',
]

