[package]
name = "hello"
version = "0.1.0"
authors = ["lzxxm <1052334039@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
proc-macro = true


[dependencies]
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"
futures = "0.3.4"
js-sys = "0.3.37"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0.50"
hmac-sha256 = "0.1.2"
stdweb= "0.4.20"
bincode = "1.2.1"
base64 = "0.12.0"
chrono = "0.4.11"
http = "0.2.1"
cookie = "0.13.3"
regex = "1.3.6"
reqwest = { version = "0.10.4", features = ["json","cookies"] }
tokio = { version = "0.2.16", features = ["full"] }


# https://rustwasm.github.io/wasm-bindgen/api/web_sys/
[dependencies.web-sys]
version = "0.3.37"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ReferrerPolicy',
  'Response',
  'Window',
  'Url',
  'UrlSearchParams',
]

